--- a/l10n/po/ja_JP/_guides/quarkus-blaze-persistence.adoc.po
+++ b/l10n/po/ja_JP/_guides/quarkus-blaze-persistence.adoc.po
@@ -7,8 +7,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "POT-Creation-Date: 2021-04-11 09:04+0000\n"
-"PO-Revision-Date: 2021-04-11 16:32+0900\n"
-"Last-Translator: \n"
+"PO-Revision-Date: 2021-06-17 08:56+0900\n"
+"Last-Translator: Hiroshi Yamanaka <hyamanak@redhat.com>\n"
 "Language-Team: \n"
 "Language: en\n"
 "MIME-Version: 1.0\n"
@@ -18,15 +18,14 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/quarkus-blaze-persistence.adoc:3
-#, fuzzy
 msgid "icon:lock[title=Fixed at build time] Configuration property fixed at build time - All other configuration properties are overridable at runtime"
-msgstr "lock]ビルド時に設定プロパティーを固定 - その他の設定プロパティーはすべて実行時にオーバーライド可能"
+msgstr "icon:lock[title=ビルド時に固定] ビルド時に固定した設定プロパティー: その他すべての設定プロパティーは実行時にオーバーライド可能"
 
 #. type: Table
 #: upstream/_guides/quarkus-blaze-persistence.adoc:8
 #, no-wrap
 msgid "[[quarkus-blaze-persistence_configuration]]link:#quarkus-blaze-persistence_configuration[Configuration property]"
-msgstr "[[quarkus-blaze-persistence_configuration]]link:#quarkus-blaze-persistence_configuration[設定プロパティ]"
+msgstr "[[quarkus-blaze-persistence_configuration]]link:#quarkus-blaze-persistence_configuration[設定プロパティー]"
 
 #. type: Table
 #: upstream/_guides/quarkus-blaze-persistence.adoc:9
@@ -51,12 +50,12 @@ msgid ""
 "A boolean flag to make it possible to prepare all view template caches on startup. By default the eager loading of the view templates is disabled to have a better startup performance. Valid values for this property are `true` or `false`.\n"
 "--"
 msgstr ""
-"icon:lock[title=Fixed at build time] [[quarkus-blaze-persistence_quarkus.blaze-persistence.template-eager-loading]]`link:#quarkus-blaze-persistence_quarkus.blaze-persistence.template-eager-loading[quarkus.blaze-persistence.template-eager-loading]`\n"
+"icon:lock[title=ビルド時に固定] [[quarkus-blaze-persistence_quarkus.blaze-persistence.template-eager-loading]]`link:#quarkus-blaze-persistence_quarkus.blaze-persistence.template-eager-loading[quarkus.blaze-persistence.template-eager-loading]`\n"
 "\n"
 "[.description]\n"
-"--\n"
-"A boolean flag to make it possible to prepare all view template caches on startup. By default the eager loading of the view templates is disabled to have a better startup performance. Valid values for this property are `true` or `false`.\n"
-"--"
+"—\n"
+"スタートアップですべての表示テンプレートキャッシュを準備できるブールフラグ。デフォルトでは、スタートアップパフォーマンスを向上するため、表示テンプレートの一括読み込みが無効化されています。このプロパティーに使用できる値は、`true` または `false` です。\n"
+"—"
 
 #. type: Table
 #: upstream/_guides/quarkus-blaze-persistence.adoc:17
@@ -81,12 +80,12 @@ msgid ""
 "An integer value that defines the default batch size for entity view attributes. By default the value is 1 and can be overridden either via `com.blazebit.persistence.view.BatchFetch#size()` or by setting this property via `com.blazebit.persistence.view.EntityViewSetting#setProperty`.\n"
 "--"
 msgstr ""
-"icon:lock[title=Fixed at build time] [[quarkus-blaze-persistence_quarkus.blaze-persistence.default-batch-size]]`link:#quarkus-blaze-persistence_quarkus.blaze-persistence.default-batch-size[quarkus.blaze-persistence.default-batch-size]`\n"
+"icon:lock[title=ビルド時に固定] [[quarkus-blaze-persistence_quarkus.blaze-persistence.default-batch-size]]`link:#quarkus-blaze-persistence_quarkus.blaze-persistence.default-batch-size[quarkus.blaze-persistence.default-batch-size]`\n"
 "\n"
 "[.description]\n"
-"--\n"
-"An integer value that defines the default batch size for entity view attributes. By default the value is 1 and can be overridden either via `com.blazebit.persistence.view.BatchFetch#size()` or by setting this property via `com.blazebit.persistence.view.EntityViewSetting#setProperty`.\n"
-"--"
+"—\n"
+"エンティティー属性のデフォルトバッチサイズを定義する整数値。デフォルトでは、値は 1 で、`com.blazebit.persistence.view.BatchFetch#size()` または、 `com.blazebit.persistence.view.EntityViewSetting#setProperty`  からこのプロパティーを設定することで上書きできます。\n"
+"—"
 
 #. type: Table
 #: upstream/_guides/quarkus-blaze-persistence.adoc:26
@@ -121,13 +120,13 @@ msgstr ""
 #. type: Table
 #: upstream/_guides/quarkus-blaze-persistence.adoc:38
 #: upstream/_guides/quarkus-blaze-persistence.adoc:92
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "string"
-msgstr "弦"
+msgstr "文字列"
 
 #. type: Table
 #: upstream/_guides/quarkus-blaze-persistence.adoc:46
-#, fuzzy, no-wrap
+#, no-wrap
 msgid ""
 "icon:lock[title=Fixed at build time] [[quarkus-blaze-persistence_quarkus.blaze-persistence.updater.eager-loading]]`link:#quarkus-blaze-persistence_quarkus.blaze-persistence.updater.eager-loading[quarkus.blaze-persistence.updater.eager-loading]`\n"
 "\n"
@@ -135,11 +134,17 @@ msgid ""
 "--\n"
 "A boolean flag to make it possible to prepare the entity view updater cache on startup. By default the eager loading of entity view updates is disabled to have a better startup performance. Valid values for this property are `true` or `false`.\n"
 "--"
-msgstr "ロック link:[, id=\"quarkus-blaze-persistence_quarkus.blaze-persistence.updater.eager-loading\"] `quarkus.blaze-persistence.updater.eager-loading`"
+msgstr ""
+"icon:lock[title=ビルド時に固定] [[quarkus-blaze-persistence_quarkus.blaze-persistence.updater.eager-loading]]`link:#quarkus-blaze-persistence_quarkus.blaze-persistence.updater.eager-loading[quarkus.blaze-persistence.updater.eager-loading]`\n"
+"\n"
+"[.description]\n"
+"—\n"
+"エンティティー表示アップデーターキャッシュをスタートアップで準備することを可能にするブールフラグ。デフォルトでは、スタートアップパフォーマンスを向上するために、エンティティー表示更新の一括読み込みが無効化されています。このプロパティーに使用できる値は、`true` または `false` です。\n"
+"—"
 
 #. type: Table
 #: upstream/_guides/quarkus-blaze-persistence.adoc:55
-#, fuzzy, no-wrap
+#, no-wrap
 msgid ""
 "icon:lock[title=Fixed at build time] [[quarkus-blaze-persistence_quarkus.blaze-persistence.updater.disallow-owned-updatable-subview]]`link:#quarkus-blaze-persistence_quarkus.blaze-persistence.updater.disallow-owned-updatable-subview[quarkus.blaze-persistence.updater.disallow-owned-updatable-subview]`\n"
 "\n"
@@ -147,11 +152,17 @@ msgid ""
 "--\n"
 "A boolean flag to make it possible to disable the strict validation that disallows the use of an updatable entity view type for owned relationships. By default the use is disallowed i.e. the default value is `true`, but since there might be strange models out there, it possible to allow this. Valid values for this property are `true` or `false`.\n"
 "--"
-msgstr "ロック link:[, id=\"quarkus-blaze-persistence_quarkus.blaze-persistence.updater.disallow-owned-updatable-subview\"] `quarkus.blaze-persistence.updater.disallow-owned-updatable-subview`"
+msgstr ""
+"icon:lock[title=ビルド時に固定] [[quarkus-blaze-persistence_quarkus.blaze-persistence.updater.disallow-owned-updatable-subview]]`link:#quarkus-blaze-persistence_quarkus.blaze-persistence.updater.disallow-owned-updatable-subview[quarkus.blaze-persistence.updater.disallow-owned-updatable-subview]`\n"
+"\n"
+"[.description]\n"
+"—\n"
+"所有されている関係の更新可能なエンティティー表示タイプを使用できないようにする厳格な検証を無効にできるブール値のフラグ。デフォルトでは、できないように設定されています (`true`)。ただし、特殊な例も考えられるので、許可することも可能です。利用できるプロパティーの値は、`true` または `false` です。\n"
+"—"
 
 #. type: Table
 #: upstream/_guides/quarkus-blaze-persistence.adoc:64
-#, fuzzy, no-wrap
+#, no-wrap
 msgid ""
 "icon:lock[title=Fixed at build time] [[quarkus-blaze-persistence_quarkus.blaze-persistence.updater.strict-cascading-check]]`link:#quarkus-blaze-persistence_quarkus.blaze-persistence.updater.strict-cascading-check[quarkus.blaze-persistence.updater.strict-cascading-check]`\n"
 "\n"
@@ -159,11 +170,17 @@ msgid ""
 "--\n"
 "A boolean flag to make it possible to disable the strict cascading check that disallows setting updatable or creatable entity views on non-cascading attributes before being associated with a cascading attribute. When disabled, it is possible, like in JPA, that the changes done to an updatable entity view are not flushed when it is not associated with an attribute that cascades updates. By default the use is enabled i.e. the default value is `true`. Valid values for this property are `true` or `false`.\n"
 "--"
-msgstr "ロック link:[, id=\"quarkus-blaze-persistence_quarkus.blaze-persistence.updater.strict-cascading-check\"] `quarkus.blaze-persistence.updater.strict-cascading-check`"
+msgstr ""
+"icon:lock[title=ビルド時に固定] [[quarkus-blaze-persistence_quarkus.blaze-persistence.updater.strict-cascading-check]]`link:#quarkus-blaze-persistence_quarkus.blaze-persistence.updater.strict-cascading-check[quarkus.blaze-persistence.updater.strict-cascading-check]`\n"
+"\n"
+"[.description]\n"
+"—\n"
+"カスケード属性に関連する前に、非カスケード属性での設定の更新可能または作成可能なエンティティー表示を許可しない厳格なカスケードチェックを無効化できるブールフラグ。無効化すると、JPA のように、更新をカスケーディング属性に関連していない場合、更新可能なエンティティー表示への変更がフラッシュされません。デフォルトは有効化されています (`true`)。このプロパティーに使用できる値は、 `true` または `false` です。\n"
+"—"
 
 #. type: Table
 #: upstream/_guides/quarkus-blaze-persistence.adoc:73
-#, fuzzy, no-wrap
+#, no-wrap
 msgid ""
 "icon:lock[title=Fixed at build time] [[quarkus-blaze-persistence_quarkus.blaze-persistence.updater.error-on-invalid-plural-setter]]`link:#quarkus-blaze-persistence_quarkus.blaze-persistence.updater.error-on-invalid-plural-setter[quarkus.blaze-persistence.updater.error-on-invalid-plural-setter]`\n"
 "\n"
@@ -171,11 +188,17 @@ msgid ""
 "--\n"
 "A boolean flag that allows to switch from warnings to boot time validation errors when invalid plural attribute setters are encountered while the strict cascading check is enabled. When `true`, a boot time validation error is thrown when encountering an invalid setter, otherwise just a warning. This configuration has no effect when the strict cascading check is disabled. By default the use is disabled i.e. the default value is `false`. Valid values for this property are `true` or `false`.\n"
 "--"
-msgstr "ロック link:[, id=\"quarkus-blaze-persistence_quarkus.blaze-persistence.updater.error-on-invalid-plural-setter\"] `quarkus.blaze-persistence.updater.error-on-invalid-plural-setter`"
+msgstr ""
+"icon:lock[title=ビルド時に固定] [[quarkus-blaze-persistence_quarkus.blaze-persistence.updater.error-on-invalid-plural-setter]]`link:#quarkus-blaze-persistence_quarkus.blaze-persistence.updater.error-on-invalid-plural-setter[quarkus.blaze-persistence.updater.error-on-invalid-plural-setter]`\n"
+"\n"
+"[.description]\n"
+"—\n"
+"A boolean flag that allows to switch from warnings to boot time validation errors when invalid plural attribute setters are encountered while the strict cascading check is enabled. When `true`, a boot time validation error is thrown when encountering an invalid setter, otherwise just a warning. This configuration has no effect when the strict cascading check is disabled. By default the use is disabled i.e. the default value is `false`. Valid values for this property are `true` or `false`.\n"
+"—"
 
 #. type: Table
 #: upstream/_guides/quarkus-blaze-persistence.adoc:82
-#, fuzzy, no-wrap
+#, no-wrap
 msgid ""
 "icon:lock[title=Fixed at build time] [[quarkus-blaze-persistence_quarkus.blaze-persistence.create-empty-flat-views]]`link:#quarkus-blaze-persistence_quarkus.blaze-persistence.create-empty-flat-views[quarkus.blaze-persistence.create-empty-flat-views]`\n"
 "\n"
@@ -183,11 +206,17 @@ msgid ""
 "--\n"
 "A boolean flag that allows to specify if empty flat views should be created by default if not specified via `EmptyFlatViewCreation`. By default the creation of empty flat views is enabled i.e. the default value is `true`. Valid values for this property are `true` or `false`.\n"
 "--"
-msgstr "ロック link:[, id=\"quarkus-blaze-persistence_quarkus.blaze-persistence.create-empty-flat-views\"] `quarkus.blaze-persistence.create-empty-flat-views`"
+msgstr ""
+"icon:lock[title=ビルド時に固定] [[quarkus-blaze-persistence_quarkus.blaze-persistence.create-empty-flat-views]]`link:#quarkus-blaze-persistence_quarkus.blaze-persistence.create-empty-flat-views[quarkus.blaze-persistence.create-empty-flat-views]`\n"
+"\n"
+"[.description]\n"
+"—\n"
+"`EmptyFlatViewCreation` で指定されていない場合、空のフラットビューがデフォルトで作成されるべきかどうかを指定できるブールフラグ。デフォルトでは、空のフラットビューの作成が有効化されています (`true`)。このプロパティーに使用できる値は、`true` または `false` です。\n"
+"—"
 
 #. type: Table
 #: upstream/_guides/quarkus-blaze-persistence.adoc:91
-#, fuzzy, no-wrap
+#, no-wrap
 msgid ""
 "icon:lock[title=Fixed at build time] [[quarkus-blaze-persistence_quarkus.blaze-persistence.expression-cache-class]]`link:#quarkus-blaze-persistence_quarkus.blaze-persistence.expression-cache-class[quarkus.blaze-persistence.expression-cache-class]`\n"
 "\n"
@@ -195,11 +224,17 @@ msgid ""
 "--\n"
 "The full qualified expression cache implementation class name.\n"
 "--"
-msgstr "ロック link:[, id=\"quarkus-blaze-persistence_quarkus.blaze-persistence.expression-cache-class\"] `quarkus.blaze-persistence.expression-cache-class`"
+msgstr ""
+"icon:lock[title=ビルド時に固定] [[quarkus-blaze-persistence_quarkus.blaze-persistence.expression-cache-class]]`link:#quarkus-blaze-persistence_quarkus.blaze-persistence.expression-cache-class[quarkus.blaze-persistence.expression-cache-class]`\n"
+"\n"
+"[.description]\n"
+"—\n"
+"完全修飾式キャッシュ実装クラス名\n"
+"—"
 
 #. type: Table
 #: upstream/_guides/quarkus-blaze-persistence.adoc:100
-#, fuzzy, no-wrap
+#, no-wrap
 msgid ""
 "icon:lock[title=Fixed at build time] [[quarkus-blaze-persistence_quarkus.blaze-persistence.inline-ctes]]`link:#quarkus-blaze-persistence_quarkus.blaze-persistence.inline-ctes[quarkus.blaze-persistence.inline-ctes]`\n"
 "\n"
@@ -207,4 +242,10 @@ msgid ""
 "--\n"
 "If set to true, the CTE queries are inlined by default. Valid values for this property are `true`, `false` or `auto`. Default is `true` which will always inline non-recursive CTEs. The `auto` configuration will only make use of inlining if the JPA provider and DBMS dialect support/require it. The property can be changed for a criteria builder before constructing a query.\n"
 "--"
-msgstr "ロック link:[, id=\"quarkus-blaze-persistence_quarkus.blaze-persistence.inline-ctes\"] `quarkus.blaze-persistence.inline-ctes`"
+msgstr ""
+"icon:lock[title=ビルド時に固定] [[quarkus-blaze-persistence_quarkus.blaze-persistence.inline-ctes]]`link:#quarkus-blaze-persistence_quarkus.blaze-persistence.inline-ctes[quarkus.blaze-persistence.inline-ctes]`\n"
+"\n"
+"[.description]\n"
+"—\n"
+"true に設定すると、CTE クエリーがデフォルトでインライン化されます。このプロパティーに使用できる値は、`true`、`false`、または `auto` です。デフォルトの値は、 `true` で、非再帰 CTE を常にインライン化します。`auto` 設定は、JPA プロバイダーと DBMS ダイアレクトが対応または必要とする場合にのみインライン化を使用できます。このプロパティーは、クエリーを構成する前にクライテリアビルダー (criteria builder) に対して変更できます。\n"
+"—"
