Apply translation memory

--- a/l10n/po/ja_JP/_versions/1.7/guides/quarkus-blaze-persistence.adoc.po
+++ b/l10n/po/ja_JP/_versions/1.7/guides/quarkus-blaze-persistence.adoc.po
@@ -135,6 +135,12 @@ msgid ""
 "A boolean flag to make it possible to prepare the entity view updater cache on startup. By default the eager loading of entity view updates is disabled to have a better startup performance. Valid values for this property are `true` or `false`.\n"
 "--"
 msgstr ""
+"icon:lock[title=ビルド時に固定] [[quarkus-blaze-persistence_quarkus.blaze-persistence.updater.eager-loading]]`link:#quarkus-blaze-persistence_quarkus.blaze-persistence.updater.eager-loading[quarkus.blaze-persistence.updater.eager-loading]`\n"
+"\n"
+"[.description]\n"
+"—\n"
+"エンティティー表示アップデーターキャッシュをスタートアップで準備することを可能にするブールフラグ。デフォルトでは、スタートアップパフォーマンスを向上するために、エンティティー表示更新の一括読み込みが無効化されています。このプロパティーに使用できる値は、`true` または `false` です。\n"
+"—"
 
 #. type: Table
 #: upstream/_versions/1.7/guides/quarkus-blaze-persistence.adoc:55
@@ -147,6 +153,12 @@ msgid ""
 "A boolean flag to make it possible to disable the strict validation that disallows the use of an updatable entity view type for owned relationships. By default the use is disallowed i.e. the default value is `true`, but since there might be strange models out there, it possible to allow this. Valid values for this property are `true` or `false`.\n"
 "--"
 msgstr ""
+"icon:lock[title=ビルド時に固定] [[quarkus-blaze-persistence_quarkus.blaze-persistence.updater.disallow-owned-updatable-subview]]`link:#quarkus-blaze-persistence_quarkus.blaze-persistence.updater.disallow-owned-updatable-subview[quarkus.blaze-persistence.updater.disallow-owned-updatable-subview]`\n"
+"\n"
+"[.description]\n"
+"—\n"
+"所有されている関係の更新可能なエンティティー表示タイプを使用できないようにする厳格な検証を無効にできるブール値のフラグ。デフォルトでは、できないように設定されています (`true`)。ただし、特殊な例も考えられるので、許可することも可能です。利用できるプロパティーの値は、`true` または `false` です。\n"
+"—"
 
 #. type: Table
 #: upstream/_versions/1.7/guides/quarkus-blaze-persistence.adoc:64
@@ -159,6 +171,12 @@ msgid ""
 "A boolean flag to make it possible to disable the strict cascading check that disallows setting updatable or creatable entity views on non-cascading attributes before being associated with a cascading attribute. When disabled, it is possible, like in JPA, that the changes done to an updatable entity view are not flushed when it is not associated with an attribute that cascades updates. By default the use is enabled i.e. the default value is `true`. Valid values for this property are `true` or `false`.\n"
 "--"
 msgstr ""
+"icon:lock[title=ビルド時に固定] [[quarkus-blaze-persistence_quarkus.blaze-persistence.updater.strict-cascading-check]]`link:#quarkus-blaze-persistence_quarkus.blaze-persistence.updater.strict-cascading-check[quarkus.blaze-persistence.updater.strict-cascading-check]`\n"
+"\n"
+"[.description]\n"
+"—\n"
+"カスケード属性に関連する前に、非カスケード属性での設定の更新可能または作成可能なエンティティー表示を許可しない厳格なカスケードチェックを無効化できるブールフラグ。無効化すると、JPA のように、更新をカスケーディング属性に関連していない場合、更新可能なエンティティー表示への変更がフラッシュされません。デフォルトは有効化されています (`true`)。このプロパティーに使用できる値は、 `true` または `false` です。\n"
+"—"
 
 #. type: Table
 #: upstream/_versions/1.7/guides/quarkus-blaze-persistence.adoc:73
@@ -183,6 +201,12 @@ msgid ""
 "A boolean flag that allows to specify if empty flat views should be created by default if not specified via `EmptyFlatViewCreation`. By default the creation of empty flat views is enabled i.e. the default value is `true`. Valid values for this property are `true` or `false`.\n"
 "--"
 msgstr ""
+"icon:lock[title=ビルド時に固定] [[quarkus-blaze-persistence_quarkus.blaze-persistence.create-empty-flat-views]]`link:#quarkus-blaze-persistence_quarkus.blaze-persistence.create-empty-flat-views[quarkus.blaze-persistence.create-empty-flat-views]`\n"
+"\n"
+"[.description]\n"
+"—\n"
+"`EmptyFlatViewCreation` で指定されていない場合、空のフラットビューがデフォルトで作成されるべきかどうかを指定できるブールフラグ。デフォルトでは、空のフラットビューの作成が有効化されています (`true`)。このプロパティーに使用できる値は、`true` または `false` です。\n"
+"—"
 
 #. type: Table
 #: upstream/_versions/1.7/guides/quarkus-blaze-persistence.adoc:91
@@ -195,6 +219,12 @@ msgid ""
 "The full qualified expression cache implementation class name.\n"
 "--"
 msgstr ""
+"icon:lock[title=ビルド時に固定] [[quarkus-blaze-persistence_quarkus.blaze-persistence.expression-cache-class]]`link:#quarkus-blaze-persistence_quarkus.blaze-persistence.expression-cache-class[quarkus.blaze-persistence.expression-cache-class]`\n"
+"\n"
+"[.description]\n"
+"—\n"
+"完全修飾式キャッシュ実装クラス名\n"
+"—"
 
 #. type: Table
 #: upstream/_versions/1.7/guides/quarkus-blaze-persistence.adoc:100
@@ -207,3 +237,9 @@ msgid ""
 "If set to true, the CTE queries are inlined by default. Valid values for this property are `true`, `false` or `auto`. Default is `true` which will always inline non-recursive CTEs. The `auto` configuration will only make use of inlining if the JPA provider and DBMS dialect support/require it. The property can be changed for a criteria builder before constructing a query.\n"
 "--"
 msgstr ""
+"icon:lock[title=ビルド時に固定] [[quarkus-blaze-persistence_quarkus.blaze-persistence.inline-ctes]]`link:#quarkus-blaze-persistence_quarkus.blaze-persistence.inline-ctes[quarkus.blaze-persistence.inline-ctes]`\n"
+"\n"
+"[.description]\n"
+"—\n"
+"true に設定すると、CTE クエリーがデフォルトでインライン化されます。このプロパティーに使用できる値は、`true`、`false`、または `auto` です。デフォルトの値は、 `true` で、非再帰 CTE を常にインライン化します。`auto` 設定は、JPA プロバイダーと DBMS ダイアレクトが対応または必要とする場合にのみインライン化を使用できます。このプロパティーは、クエリーを構成する前にクライテリアビルダー (criteria builder) に対して変更できます。\n"
+"—"
