Update .po files

--- a/l10n/po/ja_JP/_generated-config/main/config/quarkus-vertx-http-config-group-certificate-config.adoc.po
+++ b/l10n/po/ja_JP/_generated-config/main/config/quarkus-vertx-http-config-group-certificate-config.adoc.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2021-05-07 17:36+0000\n"
+"POT-Creation-Date: 2021-06-17 02:23+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -84,7 +84,7 @@ msgstr ""
 
 #. type: Table
 #: upstream/_generated-config/main/config/quarkus-vertx-http-config-group-certificate-config.adoc:35
-#: upstream/_generated-config/main/config/quarkus-vertx-http-config-group-certificate-config.adoc:71
+#: upstream/_generated-config/main/config/quarkus-vertx-http-config-group-certificate-config.adoc:80
 #, no-wrap
 msgid "path"
 msgstr ""
@@ -105,9 +105,11 @@ msgstr ""
 #: upstream/_generated-config/main/config/quarkus-vertx-http-config-group-certificate-config.adoc:44
 #: upstream/_generated-config/main/config/quarkus-vertx-http-config-group-certificate-config.adoc:53
 #: upstream/_generated-config/main/config/quarkus-vertx-http-config-group-certificate-config.adoc:62
-#: upstream/_generated-config/main/config/quarkus-vertx-http-config-group-certificate-config.adoc:80
+#: upstream/_generated-config/main/config/quarkus-vertx-http-config-group-certificate-config.adoc:71
 #: upstream/_generated-config/main/config/quarkus-vertx-http-config-group-certificate-config.adoc:89
 #: upstream/_generated-config/main/config/quarkus-vertx-http-config-group-certificate-config.adoc:98
+#: upstream/_generated-config/main/config/quarkus-vertx-http-config-group-certificate-config.adoc:107
+#: upstream/_generated-config/main/config/quarkus-vertx-http-config-group-certificate-config.adoc:116
 #, no-wrap
 msgid "string"
 msgstr "string"
@@ -146,16 +148,28 @@ msgstr ""
 #: upstream/_generated-config/main/config/quarkus-vertx-http-config-group-certificate-config.adoc:70
 #, no-wrap
 msgid ""
-"[[quarkus-vertx-http-config-group-certificate-config_quarkus.http.ssl.certificate.trust-store-file]]`link:#quarkus-vertx-http-config-group-certificate-config_quarkus.http.ssl.certificate.trust-store-file[quarkus.http.ssl.certificate.trust-store-file]`\n"
+"[[quarkus-vertx-http-config-group-certificate-config_quarkus.http.ssl.certificate.key-store-key-alias]]`link:#quarkus-vertx-http-config-group-certificate-config_quarkus.http.ssl.certificate.key-store-key-alias[quarkus.http.ssl.certificate.key-store-key-alias]`\n"
 "\n"
 "[.description]\n"
 "--\n"
-"An optional trust store which holds the certificate information of the certificates to trust\n"
+"An optional parameter to select a specific key in the key store. When SNI is disabled, if the key store contains multiple keys and no alias is specified, the behavior is undefined.\n"
 "--"
 msgstr ""
 
 #. type: Table
 #: upstream/_generated-config/main/config/quarkus-vertx-http-config-group-certificate-config.adoc:79
+#, no-wrap
+msgid ""
+"[[quarkus-vertx-http-config-group-certificate-config_quarkus.http.ssl.certificate.trust-store-file]]`link:#quarkus-vertx-http-config-group-certificate-config_quarkus.http.ssl.certificate.trust-store-file[quarkus.http.ssl.certificate.trust-store-file]`\n"
+"\n"
+"[.description]\n"
+"--\n"
+"An optional trust store which holds the certificate information of the certificates to trust.\n"
+"--"
+msgstr ""
+
+#. type: Table
+#: upstream/_generated-config/main/config/quarkus-vertx-http-config-group-certificate-config.adoc:88
 #, no-wrap
 msgid ""
 "[[quarkus-vertx-http-config-group-certificate-config_quarkus.http.ssl.certificate.trust-store-file-type]]`link:#quarkus-vertx-http-config-group-certificate-config_quarkus.http.ssl.certificate.trust-store-file-type[quarkus.http.ssl.certificate.trust-store-file-type]`\n"
@@ -167,7 +181,7 @@ msgid ""
 msgstr ""
 
 #. type: Table
-#: upstream/_generated-config/main/config/quarkus-vertx-http-config-group-certificate-config.adoc:88
+#: upstream/_generated-config/main/config/quarkus-vertx-http-config-group-certificate-config.adoc:97
 #, no-wrap
 msgid ""
 "[[quarkus-vertx-http-config-group-certificate-config_quarkus.http.ssl.certificate.trust-store-provider]]`link:#quarkus-vertx-http-config-group-certificate-config_quarkus.http.ssl.certificate.trust-store-provider[quarkus.http.ssl.certificate.trust-store-provider]`\n"
@@ -179,7 +193,7 @@ msgid ""
 msgstr ""
 
 #. type: Table
-#: upstream/_generated-config/main/config/quarkus-vertx-http-config-group-certificate-config.adoc:97
+#: upstream/_generated-config/main/config/quarkus-vertx-http-config-group-certificate-config.adoc:106
 #, no-wrap
 msgid ""
 "[[quarkus-vertx-http-config-group-certificate-config_quarkus.http.ssl.certificate.trust-store-password]]`link:#quarkus-vertx-http-config-group-certificate-config_quarkus.http.ssl.certificate.trust-store-password[quarkus.http.ssl.certificate.trust-store-password]`\n"
@@ -187,5 +201,17 @@ msgid ""
 "[.description]\n"
 "--\n"
 "A parameter to specify the password of the trust store file.\n"
+"--"
+msgstr ""
+
+#. type: Table
+#: upstream/_generated-config/main/config/quarkus-vertx-http-config-group-certificate-config.adoc:115
+#, no-wrap
+msgid ""
+"[[quarkus-vertx-http-config-group-certificate-config_quarkus.http.ssl.certificate.trust-store-cert-alias]]`link:#quarkus-vertx-http-config-group-certificate-config_quarkus.http.ssl.certificate.trust-store-cert-alias[quarkus.http.ssl.certificate.trust-store-cert-alias]`\n"
+"\n"
+"[.description]\n"
+"--\n"
+"An optional parameter to trust only one specific certificate in the trust store (instead of trusting all certificates in the store).\n"
 "--"
 msgstr ""
