--- a/l10n/po/ja_JP/_generated-config/main/config/quarkus-vertx-http-config-group-server-limits-config.adoc.po
+++ b/l10n/po/ja_JP/_generated-config/main/config/quarkus-vertx-http-config-group-server-limits-config.adoc.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2021-05-07 17:36+0000\n"
+"POT-Creation-Date: 2021-06-17 02:23+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -116,6 +116,7 @@ msgstr ""
 
 #. type: Table
 #: upstream/_generated-config/main/config/quarkus-vertx-http-config-group-server-limits-config.adoc:44
+#: upstream/_generated-config/main/config/quarkus-vertx-http-config-group-server-limits-config.adoc:62
 #, no-wrap
 msgid "int"
 msgstr "int"
@@ -139,18 +140,30 @@ msgid ""
 msgstr ""
 
 #. type: Table
-#: upstream/_generated-config/main/config/quarkus-vertx-http-config-group-server-limits-config.adoc:55
+#: upstream/_generated-config/main/config/quarkus-vertx-http-config-group-server-limits-config.adoc:56
 #, no-wrap
 msgid "`2048`"
 msgstr ""
 
+#. type: Table
+#: upstream/_generated-config/main/config/quarkus-vertx-http-config-group-server-limits-config.adoc:61
+#, no-wrap
+msgid ""
+"[[quarkus-vertx-http-config-group-server-limits-config_quarkus.http.limits.max-connections]]`link:#quarkus-vertx-http-config-group-server-limits-config_quarkus.http.limits.max-connections[quarkus.http.limits.max-connections]`\n"
+"\n"
+"[.description]\n"
+"--\n"
+"The maximum number of connections that are allowed at any one time. If this is set it is recommended to set a short idle timeout.\n"
+"--"
+msgstr ""
+
 #. type: Block title
-#: upstream/_generated-config/main/config/quarkus-vertx-http-config-group-server-limits-config.adoc:58
+#: upstream/_generated-config/main/config/quarkus-vertx-http-config-group-server-limits-config.adoc:67
 #, no-wrap
 msgid "About the MemorySize format"
 msgstr ""
 
 #. type: delimited block =
-#: upstream/_generated-config/main/config/quarkus-vertx-http-config-group-server-limits-config.adoc:62
+#: upstream/_generated-config/main/config/quarkus-vertx-http-config-group-server-limits-config.adoc:71
 msgid "A size configuration option recognises string in this format (shown as a regular expression): `[0-9]+[KkMmGgTtPpEeZzYy]?`.  If no suffix is given, assume bytes."
 msgstr ""
