Apply translation memory

--- a/l10n/po/ja_JP/_versions/main/guides/vault.adoc.po
+++ b/l10n/po/ja_JP/_versions/main/guides/vault.adoc.po
@@ -759,7 +759,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/main/guides/vault.adoc:429
 msgid "If enabled, when you access the `/q/health/ready` endpoint of your application you will have information about the connection validation status."
-msgstr ""
+msgstr "これを有効にすると、アプリケーションの `/q/health/ready` エンドポイントにアクセスしたときに、接続検証ステータスに関する情報が表示されます。"
 
 #. type: Plain text
 #: upstream/_versions/main/guides/vault.adoc:431
