Update .po files

--- a/l10n/po/ja_JP/_versions/main/guides/apicurio-registry-dev-services.adoc.po
+++ b/l10n/po/ja_JP/_versions/main/guides/apicurio-registry-dev-services.adoc.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2021-06-16 02:22+0000\n"
+"POT-Creation-Date: 2021-06-18 02:27+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -91,7 +91,7 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_versions/main/guides/apicurio-registry-dev-services.adoc:42
-msgid "Dev Services for Apicurio Registry uses `apicurio/apicurio-registry-mem` images.  You can select any version from https://hub.docker.com/r/apicurio/apicurio-registry-mem:"
+msgid "Dev Services for Apicurio Registry uses `apicurio/apicurio-registry-mem` images.  You can select any 2.x version from https://hub.docker.com/r/apicurio/apicurio-registry-mem:"
 msgstr ""
 
 #. type: delimited block -
