--- a/l10n/po/ja_JP/_versions/main/guides/logging.adoc.po
+++ b/l10n/po/ja_JP/_versions/main/guides/logging.adoc.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2021-05-07 17:34+0000\n"
+"POT-Creation-Date: 2021-06-18 02:27+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -207,7 +207,9 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_versions/main/guides/logging.adoc:94
-msgid "This is the library needed for Log2J version 2; if you use the legacy Log4J version 1 you need to use `log4j-jboss-logmanager` instead."
+#, fuzzy
+#| msgid "This is the library needed for Log2J version 2; if you use the legacy Log4J version 1 you need to use `log4j-jboss-logmanager` instead."
+msgid "This is the library needed for Log4J version 2; if you use the legacy Log4J version 1 you need to use `log4j-jboss-logmanager` instead."
 msgstr "これはLog2Jのバージョン2に必要なライブラリです。もしレガシーなLog4Jのバージョン1を使用している場合は、代わりに `log4j-jboss-logmanager` を使用する必要があります。"
 
 #. type: Plain text
@@ -1246,7 +1248,7 @@ msgstr "カテゴリにアタッチされた名前付きハンドラー"
 #: upstream/_versions/main/guides/logging.adoc:343
 #, no-wrap
 msgid ""
-"# Send output to the console\n"
+"# Send output to a trace.log file under the /tmp directory\n"
 "quarkus.log.file.path=/tmp/trace.log\n"
 "quarkus.log.console.format=%d{HH:mm:ss} %-5p [%c{2.}] (%t) %s%e%n\n"
 "# Configure a named handler that logs to console\n"
