--- a/l10n/po/ja_JP/_generated-config/main/config/quarkus-datasource-config-group-data-source-runtime-config.adoc.po
+++ b/l10n/po/ja_JP/_generated-config/main/config/quarkus-datasource-config-group-data-source-runtime-config.adoc.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2021-05-21 02:33+0000\n"
+"POT-Creation-Date: 2021-06-18 02:25+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -59,9 +59,11 @@ msgstr ""
 #: upstream/_generated-config/main/config/quarkus-datasource-config-group-data-source-runtime-config.adoc:35
 #: upstream/_generated-config/main/config/quarkus-datasource-config-group-data-source-runtime-config.adoc:46
 #: upstream/_generated-config/main/config/quarkus-datasource-config-group-data-source-runtime-config.adoc:69
-#: upstream/_generated-config/main/config/quarkus-datasource-config-group-data-source-runtime-config.adoc:78
 #: upstream/_generated-config/main/config/quarkus-datasource-config-group-data-source-runtime-config.adoc:87
-#: upstream/_generated-config/main/config/quarkus-datasource-config-group-data-source-runtime-config.adoc:98
+#: upstream/_generated-config/main/config/quarkus-datasource-config-group-data-source-runtime-config.adoc:125
+#: upstream/_generated-config/main/config/quarkus-datasource-config-group-data-source-runtime-config.adoc:134
+#: upstream/_generated-config/main/config/quarkus-datasource-config-group-data-source-runtime-config.adoc:143
+#: upstream/_generated-config/main/config/quarkus-datasource-config-group-data-source-runtime-config.adoc:154
 #, no-wrap
 msgid "string"
 msgstr "string"
@@ -118,14 +120,17 @@ msgstr ""
 
 #. type: Table
 #: upstream/_generated-config/main/config/quarkus-datasource-config-group-data-source-runtime-config.adoc:55
-#: upstream/_generated-config/main/config/quarkus-datasource-config-group-data-source-runtime-config.adoc:107
+#: upstream/_generated-config/main/config/quarkus-datasource-config-group-data-source-runtime-config.adoc:78
+#: upstream/_generated-config/main/config/quarkus-datasource-config-group-data-source-runtime-config.adoc:116
+#: upstream/_generated-config/main/config/quarkus-datasource-config-group-data-source-runtime-config.adoc:163
 #, no-wrap
 msgid "boolean"
 msgstr "boolean"
 
 #. type: Table
 #: upstream/_generated-config/main/config/quarkus-datasource-config-group-data-source-runtime-config.adoc:58
-#: upstream/_generated-config/main/config/quarkus-datasource-config-group-data-source-runtime-config.adoc:109
+#: upstream/_generated-config/main/config/quarkus-datasource-config-group-data-source-runtime-config.adoc:119
+#: upstream/_generated-config/main/config/quarkus-datasource-config-group-data-source-runtime-config.adoc:165
 #, no-wrap
 msgid "`false`"
 msgstr "`false`"
@@ -140,6 +145,92 @@ msgstr ""
 #: upstream/_generated-config/main/config/quarkus-datasource-config-group-data-source-runtime-config.adoc:68
 #, no-wrap
 msgid ""
+"icon:lock[title=Fixed at build time] [[quarkus-datasource-config-group-data-source-runtime-config_quarkus.datasource.-datasource-name-.db-kind]]`link:#quarkus-datasource-config-group-data-source-runtime-config_quarkus.datasource.-datasource-name-.db-kind[quarkus.datasource.\"datasource-name\".db-kind]`\n"
+"\n"
+"[.description]\n"
+"--\n"
+"The kind of database we will connect to (e.g. h2, postgresql...).\n"
+"--"
+msgstr ""
+
+#. type: Table
+#: upstream/_generated-config/main/config/quarkus-datasource-config-group-data-source-runtime-config.adoc:77
+#, no-wrap
+msgid ""
+"icon:lock[title=Fixed at build time] [[quarkus-datasource-config-group-data-source-runtime-config_quarkus.datasource.-datasource-name-.devservices]]`link:#quarkus-datasource-config-group-data-source-runtime-config_quarkus.datasource.-datasource-name-.devservices[quarkus.datasource.\"datasource-name\".devservices]`\n"
+"\n"
+"[.description]\n"
+"--\n"
+"If DevServices has been explicitly enabled or disabled. DevServices is generally enabled by default, unless there is an existing configuration present. When DevServices is enabled Quarkus will attempt to automatically configure and start a database when running in Dev or Test mode.\n"
+"--"
+msgstr ""
+
+#. type: Table
+#: upstream/_generated-config/main/config/quarkus-datasource-config-group-data-source-runtime-config.adoc:86
+#, no-wrap
+msgid ""
+"icon:lock[title=Fixed at build time] [[quarkus-datasource-config-group-data-source-runtime-config_quarkus.datasource.-datasource-name-.devservices.image-name]]`link:#quarkus-datasource-config-group-data-source-runtime-config_quarkus.datasource.-datasource-name-.devservices.image-name[quarkus.datasource.\"datasource-name\".devservices.image-name]`\n"
+"\n"
+"[.description]\n"
+"--\n"
+"The container image name to use, for container based DevServices providers. If the provider is not container based (e.g. a H2 Database) then this has no effect.\n"
+"--"
+msgstr ""
+
+#. type: Table
+#: upstream/_generated-config/main/config/quarkus-datasource-config-group-data-source-runtime-config.adoc:95
+#, no-wrap
+msgid ""
+"icon:lock[title=Fixed at build time] [[quarkus-datasource-config-group-data-source-runtime-config_quarkus.datasource.-datasource-name-.devservices.properties-properties]]`link:#quarkus-datasource-config-group-data-source-runtime-config_quarkus.datasource.-datasource-name-.devservices.properties-properties[quarkus.datasource.\"datasource-name\".devservices.properties]`\n"
+"\n"
+"[.description]\n"
+"--\n"
+"Generic properties that are added to the database connection URL.\n"
+"--"
+msgstr ""
+
+#. type: Table
+#: upstream/_generated-config/main/config/quarkus-datasource-config-group-data-source-runtime-config.adoc:96
+#, no-wrap
+msgid "`Map<String,String>`"
+msgstr ""
+
+#. type: Table
+#: upstream/_generated-config/main/config/quarkus-datasource-config-group-data-source-runtime-config.adoc:105
+#, no-wrap
+msgid ""
+"icon:lock[title=Fixed at build time] [[quarkus-datasource-config-group-data-source-runtime-config_quarkus.datasource.-datasource-name-.devservices.port]]`link:#quarkus-datasource-config-group-data-source-runtime-config_quarkus.datasource.-datasource-name-.devservices.port[quarkus.datasource.\"datasource-name\".devservices.port]`\n"
+"\n"
+"[.description]\n"
+"--\n"
+"Optional fixed port the dev service will listen to. \n"
+" If not defined, the port will be chosen randomly.\n"
+"--"
+msgstr ""
+
+#. type: Table
+#: upstream/_generated-config/main/config/quarkus-datasource-config-group-data-source-runtime-config.adoc:106
+#, no-wrap
+msgid "int"
+msgstr "int"
+
+#. type: Table
+#: upstream/_generated-config/main/config/quarkus-datasource-config-group-data-source-runtime-config.adoc:115
+#, no-wrap
+msgid ""
+"icon:lock[title=Fixed at build time] [[quarkus-datasource-config-group-data-source-runtime-config_quarkus.datasource.-datasource-name-.health-exclude]]`link:#quarkus-datasource-config-group-data-source-runtime-config_quarkus.datasource.-datasource-name-.health-exclude[quarkus.datasource.\"datasource-name\".health-exclude]`\n"
+"\n"
+"[.description]\n"
+"--\n"
+"Whether this particular data source should be excluded from the health check if the general health check for data sources is enabled. \n"
+" By default, the health check includes all configured data sources (if it is enabled).\n"
+"--"
+msgstr ""
+
+#. type: Table
+#: upstream/_generated-config/main/config/quarkus-datasource-config-group-data-source-runtime-config.adoc:124
+#, no-wrap
+msgid ""
 "[[quarkus-datasource-config-group-data-source-runtime-config_quarkus.datasource.-datasource-name-.username]]`link:#quarkus-datasource-config-group-data-source-runtime-config_quarkus.datasource.-datasource-name-.username[quarkus.datasource.\"datasource-name\".username]`\n"
 "\n"
 "[.description]\n"
@@ -149,7 +240,7 @@ msgid ""
 msgstr ""
 
 #. type: Table
-#: upstream/_generated-config/main/config/quarkus-datasource-config-group-data-source-runtime-config.adoc:77
+#: upstream/_generated-config/main/config/quarkus-datasource-config-group-data-source-runtime-config.adoc:133
 #, no-wrap
 msgid ""
 "[[quarkus-datasource-config-group-data-source-runtime-config_quarkus.datasource.-datasource-name-.password]]`link:#quarkus-datasource-config-group-data-source-runtime-config_quarkus.datasource.-datasource-name-.password[quarkus.datasource.\"datasource-name\".password]`\n"
@@ -161,7 +252,7 @@ msgid ""
 msgstr ""
 
 #. type: Table
-#: upstream/_generated-config/main/config/quarkus-datasource-config-group-data-source-runtime-config.adoc:86
+#: upstream/_generated-config/main/config/quarkus-datasource-config-group-data-source-runtime-config.adoc:142
 #, no-wrap
 msgid ""
 "[[quarkus-datasource-config-group-data-source-runtime-config_quarkus.datasource.-datasource-name-.credentials-provider]]`link:#quarkus-datasource-config-group-data-source-runtime-config_quarkus.datasource.-datasource-name-.credentials-provider[quarkus.datasource.\"datasource-name\".credentials-provider]`\n"
@@ -173,7 +264,7 @@ msgid ""
 msgstr ""
 
 #. type: Table
-#: upstream/_generated-config/main/config/quarkus-datasource-config-group-data-source-runtime-config.adoc:97
+#: upstream/_generated-config/main/config/quarkus-datasource-config-group-data-source-runtime-config.adoc:153
 #, no-wrap
 msgid ""
 "[[quarkus-datasource-config-group-data-source-runtime-config_quarkus.datasource.-datasource-name-.credentials-provider-name]]`link:#quarkus-datasource-config-group-data-source-runtime-config_quarkus.datasource.-datasource-name-.credentials-provider-name[quarkus.datasource.\"datasource-name\".credentials-provider-name]`\n"
@@ -187,7 +278,7 @@ msgid ""
 msgstr ""
 
 #. type: Table
-#: upstream/_generated-config/main/config/quarkus-datasource-config-group-data-source-runtime-config.adoc:106
+#: upstream/_generated-config/main/config/quarkus-datasource-config-group-data-source-runtime-config.adoc:162
 #, no-wrap
 msgid ""
 "[[quarkus-datasource-config-group-data-source-runtime-config_quarkus.datasource.-datasource-name-.start-container]]`link:#quarkus-datasource-config-group-data-source-runtime-config_quarkus.datasource.-datasource-name-.start-container[quarkus.datasource.\"datasource-name\".start-container]`\n"
@@ -197,6 +288,3 @@ msgid ""
 "If this is true then when running in dev or test mode Quarkus will attempt to start a testcontainers based database with these provided settings. This is not supported for all databases, and will not work in production.\n"
 "--"
 msgstr ""
-
-#~ msgid "int"
-#~ msgstr "int"
