--- a/l10n/po/ja_JP/_generated-config/main/config/quarkus-opentelemetry-open-telemetry-config.adoc.po
+++ b/l10n/po/ja_JP/_generated-config/main/config/quarkus-opentelemetry-open-telemetry-config.adoc.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2021-05-28 02:58+0000\n"
+"POT-Creation-Date: 2021-06-18 02:26+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -54,7 +54,7 @@ msgstr ""
 
 #. type: Table
 #: upstream/_generated-config/main/config/quarkus-opentelemetry-open-telemetry-config.adoc:18
-#: upstream/_generated-config/main/config/quarkus-opentelemetry-open-telemetry-config.adoc:28
+#: upstream/_generated-config/main/config/quarkus-opentelemetry-open-telemetry-config.adoc:39
 #, no-wrap
 msgid "boolean"
 msgstr "boolean"
@@ -66,7 +66,34 @@ msgid "`true`"
 msgstr "`true`"
 
 #. type: Table
-#: upstream/_generated-config/main/config/quarkus-opentelemetry-open-telemetry-config.adoc:27
+#: upstream/_generated-config/main/config/quarkus-opentelemetry-open-telemetry-config.adoc:28
+#, no-wrap
+msgid ""
+"icon:lock[title=Fixed at build time] [[quarkus-opentelemetry-open-telemetry-config_quarkus.opentelemetry.propagators]]`link:#quarkus-opentelemetry-open-telemetry-config_quarkus.opentelemetry.propagators[quarkus.opentelemetry.propagators]`\n"
+"\n"
+"[.description]\n"
+"--\n"
+"Comma separated list of OpenTelemetry propagators which must be supported. \n"
+" Valid values are `b3, b3multi, baggage, jaeger, ottrace, tracecontext, xray`. \n"
+" Default value is `traceContext,baggage`\n"
+"--"
+msgstr ""
+
+#. type: Table
+#: upstream/_generated-config/main/config/quarkus-opentelemetry-open-telemetry-config.adoc:29
+#: upstream/_generated-config/main/config/quarkus-opentelemetry-open-telemetry-config.adoc:50
+#, no-wrap
+msgid "list of string"
+msgstr ""
+
+#. type: Table
+#: upstream/_generated-config/main/config/quarkus-opentelemetry-open-telemetry-config.adoc:32
+#, no-wrap
+msgid "`tracecontext,baggage`"
+msgstr ""
+
+#. type: Table
+#: upstream/_generated-config/main/config/quarkus-opentelemetry-open-telemetry-config.adoc:38
 #, no-wrap
 msgid ""
 "icon:lock[title=Fixed at build time] [[quarkus-opentelemetry-open-telemetry-config_quarkus.opentelemetry.tracer.enabled]]`link:#quarkus-opentelemetry-open-telemetry-config_quarkus.opentelemetry.tracer.enabled[quarkus.opentelemetry.tracer.enabled]`\n"
@@ -75,5 +102,19 @@ msgid ""
 "--\n"
 "Support for tracing with OpenTelemetry. \n"
 " Support for tracing will be enabled if OpenTelemetry support is enabled and either this value is true, or this value is unset.\n"
+"--"
+msgstr ""
+
+#. type: Table
+#: upstream/_generated-config/main/config/quarkus-opentelemetry-open-telemetry-config.adoc:49
+#, no-wrap
+msgid ""
+"icon:lock[title=Fixed at build time] [[quarkus-opentelemetry-open-telemetry-config_quarkus.opentelemetry.tracer.resources]]`link:#quarkus-opentelemetry-open-telemetry-config_quarkus.opentelemetry.tracer.resources[quarkus.opentelemetry.tracer.resources]`\n"
+"\n"
+"[.description]\n"
+"--\n"
+"Comma separated list of resources that represents the entity that is producing telemetry. \n"
+" Valid values are `beanstalk, ec2, ecs, eks, host, lambda, os,\n"
+"process, processruntime`.\n"
 "--"
 msgstr ""
