Apply translation memory

--- a/l10n/po/ja_JP/_generated-config/main/config/quarkus-opentelemetry-config-group-tracing-tracer-runtime-config-sampler-config.adoc.po
+++ b/l10n/po/ja_JP/_generated-config/main/config/quarkus-opentelemetry-config-group-tracing-tracer-runtime-config-sampler-config.adoc.po
@@ -31,13 +31,13 @@ msgstr ""
 #: upstream/_generated-config/main/config/quarkus-opentelemetry-config-group-tracing-tracer-runtime-config-sampler-config.adoc:9
 #, no-wrap
 msgid "Type"
-msgstr ""
+msgstr "タイプ"
 
 #. type: Table
 #: upstream/_generated-config/main/config/quarkus-opentelemetry-config-group-tracing-tracer-runtime-config-sampler-config.adoc:11
 #, no-wrap
 msgid "Default"
-msgstr ""
+msgstr "デフォルト"
 
 #. type: Table
 #: upstream/_generated-config/main/config/quarkus-opentelemetry-config-group-tracing-tracer-runtime-config-sampler-config.adoc:18
@@ -57,7 +57,7 @@ msgstr ""
 #: upstream/_generated-config/main/config/quarkus-opentelemetry-config-group-tracing-tracer-runtime-config-sampler-config.adoc:19
 #, no-wrap
 msgid "string"
-msgstr ""
+msgstr "string"
 
 #. type: Table
 #: upstream/_generated-config/main/config/quarkus-opentelemetry-config-group-tracing-tracer-runtime-config-sampler-config.adoc:22
@@ -81,7 +81,7 @@ msgstr ""
 #: upstream/_generated-config/main/config/quarkus-opentelemetry-config-group-tracing-tracer-runtime-config-sampler-config.adoc:28
 #, no-wrap
 msgid "double"
-msgstr ""
+msgstr "double"
 
 #. type: Table
 #: upstream/_generated-config/main/config/quarkus-opentelemetry-config-group-tracing-tracer-runtime-config-sampler-config.adoc:38
@@ -101,10 +101,10 @@ msgstr ""
 #: upstream/_generated-config/main/config/quarkus-opentelemetry-config-group-tracing-tracer-runtime-config-sampler-config.adoc:39
 #, no-wrap
 msgid "boolean"
-msgstr ""
+msgstr "boolean"
 
 #. type: Table
 #: upstream/_generated-config/main/config/quarkus-opentelemetry-config-group-tracing-tracer-runtime-config-sampler-config.adoc:41
 #, no-wrap
 msgid "`true`"
-msgstr ""
+msgstr "`true`"
