--- a/l10n/po/ja_JP/_generated-config/main/config/quarkus-opentelemetry-general-config-items.adoc.po
+++ b/l10n/po/ja_JP/_generated-config/main/config/quarkus-opentelemetry-general-config-items.adoc.po
@@ -97,7 +97,7 @@ msgstr ""
 #: upstream/_generated-config/main/config/quarkus-opentelemetry-general-config-items.adoc:40
 #, no-wrap
 msgid "string"
-msgstr ""
+msgstr "string"
 
 #. type: Table
 #: upstream/_generated-config/main/config/quarkus-opentelemetry-general-config-items.adoc:43
@@ -121,7 +121,7 @@ msgstr ""
 #: upstream/_generated-config/main/config/quarkus-opentelemetry-general-config-items.adoc:49
 #, no-wrap
 msgid "double"
-msgstr ""
+msgstr "double"
 
 #. type: Table
 #: upstream/_generated-config/main/config/quarkus-opentelemetry-general-config-items.adoc:59
@@ -141,4 +141,4 @@ msgstr ""
 #: upstream/_generated-config/main/config/quarkus-opentelemetry-general-config-items.adoc:62
 #, no-wrap
 msgid "`true`"
-msgstr ""
+msgstr "`true`"
