--- a/l10n/po/ja_JP/_generated-config/main/config/quarkus-kafka-client-general-config-items.adoc.po
+++ b/l10n/po/ja_JP/_generated-config/main/config/quarkus-kafka-client-general-config-items.adoc.po
@@ -120,7 +120,7 @@ msgstr ""
 #: upstream/_generated-config/main/config/quarkus-kafka-client-general-config-items.adoc:50
 #, no-wrap
 msgid "`true`"
-msgstr ""
+msgstr "`true`"
 
 #. type: Table
 #: upstream/_generated-config/main/config/quarkus-kafka-client-general-config-items.adoc:56
