--- a/l10n/po/ja_JP/_generated-config/main/config/quarkus-kafka-kafka-build-time-config.adoc.po
+++ b/l10n/po/ja_JP/_generated-config/main/config/quarkus-kafka-kafka-build-time-config.adoc.po
@@ -155,7 +155,7 @@ msgstr ""
 #: upstream/_generated-config/main/config/quarkus-kafka-kafka-build-time-config.adoc:70
 #, no-wrap
 msgid "`true`"
-msgstr ""
+msgstr "`true`"
 
 #. type: Table
 #: upstream/_generated-config/main/config/quarkus-kafka-kafka-build-time-config.adoc:76
