--- a/l10n/po/ja_JP/_generated-config/main/config/quarkus-opentelemetry-tracer-tracing-tracer-runtime-config.adoc.po
+++ b/l10n/po/ja_JP/_generated-config/main/config/quarkus-opentelemetry-tracer-tracing-tracer-runtime-config.adoc.po
@@ -31,13 +31,13 @@ msgstr ""
 #: upstream/_generated-config/main/config/quarkus-opentelemetry-tracer-tracing-tracer-runtime-config.adoc:9
 #, no-wrap
 msgid "Type"
-msgstr ""
+msgstr "タイプ"
 
 #. type: Table
 #: upstream/_generated-config/main/config/quarkus-opentelemetry-tracer-tracing-tracer-runtime-config.adoc:11
 #, no-wrap
 msgid "Default"
-msgstr ""
+msgstr "デフォルト"
 
 #. type: Table
 #: upstream/_generated-config/main/config/quarkus-opentelemetry-tracer-tracing-tracer-runtime-config.adoc:16
@@ -75,7 +75,7 @@ msgstr ""
 #: upstream/_generated-config/main/config/quarkus-opentelemetry-tracer-tracing-tracer-runtime-config.adoc:28
 #, no-wrap
 msgid "string"
-msgstr ""
+msgstr "string"
 
 #. type: Table
 #: upstream/_generated-config/main/config/quarkus-opentelemetry-tracer-tracing-tracer-runtime-config.adoc:31
@@ -99,7 +99,7 @@ msgstr ""
 #: upstream/_generated-config/main/config/quarkus-opentelemetry-tracer-tracing-tracer-runtime-config.adoc:37
 #, no-wrap
 msgid "double"
-msgstr ""
+msgstr "double"
 
 #. type: Table
 #: upstream/_generated-config/main/config/quarkus-opentelemetry-tracer-tracing-tracer-runtime-config.adoc:47
@@ -119,10 +119,10 @@ msgstr ""
 #: upstream/_generated-config/main/config/quarkus-opentelemetry-tracer-tracing-tracer-runtime-config.adoc:48
 #, no-wrap
 msgid "boolean"
-msgstr ""
+msgstr "boolean"
 
 #. type: Table
 #: upstream/_generated-config/main/config/quarkus-opentelemetry-tracer-tracing-tracer-runtime-config.adoc:50
 #, no-wrap
 msgid "`true`"
-msgstr ""
+msgstr "`true`"
