--- a/l10n/po/ja_JP/_posts/2021-06-09-quarkus-1-13-7-final-released.adoc.po
+++ b/l10n/po/ja_JP/_posts/2021-06-09-quarkus-1-13-7-final-released.adoc.po
@@ -3,28 +3,28 @@
 # This file is distributed under the same license as the PACKAGE package.
 # FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
 #
-#, fuzzy
 msgid ""
 msgstr ""
-"Project-Id-Version: PACKAGE VERSION\n"
+"Project-Id-Version: \n"
 "POT-Creation-Date: 2021-06-09 15:06+0000\n"
-"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
-"Language-Team: LANGUAGE <LL@li.org>\n"
-"Language: \n"
+"PO-Revision-Date: 2021-06-20 23:36+0900\n"
+"Language: ja\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Last-Translator: \n"
+"Language-Team: \n"
+"X-Generator: Poedit 2.4.2\n"
 
 #. type: Plain text
 #: upstream/_posts/2021-06-09-quarkus-1-13-7-final-released.adoc:1
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "---\n"
 msgstr "---\n"
 
 #. type: Plain text
 #: upstream/_posts/2021-06-09-quarkus-1-13-7-final-released.adoc:8
-#, fuzzy, no-wrap
+#, no-wrap
 msgid ""
 "layout: post\n"
 "title: 'Quarkus 1.13.7.Final released - Maintenance release'\n"
@@ -35,7 +35,7 @@ msgid ""
 "---\n"
 msgstr ""
 "layout: post\n"
-"title: 'Quarkus 1.13.7.Final released - Maintenance release'\n"
+"title: 'Quarkus 1.13.7.Final リリース - メンテナンスリリース'\n"
 "date: 2021-06-09\n"
 "tags: release\n"
 "synopsis: 1.13.7.Finalは、1.13リリーストレインのメンテナンスリリースです。\n"
@@ -44,9 +44,10 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_posts/2021-06-09-quarkus-1-13-7-final-released.adoc:11
-#, fuzzy
 msgid "And here comes 1.13.7.Final, our (most probably!) last round of bugfixes for the 1.13 release."
-msgstr "1.13リリースのための（おそらく！）最後のバグフィックスである1.13.7.Finalが登場します。"
+msgstr ""
+"1.13リリースのための（おそらく！）最後のバグフィックスである1.13.7.Finalがやって来ました\n"
+"。"
 
 #. type: Plain text
 #: upstream/_posts/2021-06-09-quarkus-1-13-7-final-released.adoc:13
@@ -61,31 +62,27 @@ msgstr "完全な変更履歴"
 
 #. type: Plain text
 #: upstream/_posts/2021-06-09-quarkus-1-13-7-final-released.adoc:17
-#, fuzzy
 msgid "You can get https://github.com/quarkusio/quarkus/releases/tag/1.13.7.Final[the full changelog of 1.13.7.Final on GitHub]."
-msgstr "link:https://github.com/quarkusio/quarkus/releases/tag/1.13.7.Final[1.13.7.Finalの完全な変更履歴はGitHubに]掲載されています。"
+msgstr "link:https://github.com/quarkusio/quarkus/releases/tag/1.13.7.Final[1.13.7.Finalの完全な変更履歴はGitHub] に掲載されています。"
 
 #. type: Title ==
 #: upstream/_posts/2021-06-09-quarkus-1-13-7-final-released.adoc:18
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "2.0 coming soon"
 msgstr "2.0が間もなく登場"
 
 #. type: Plain text
 #: upstream/_posts/2021-06-09-quarkus-1-13-7-final-released.adoc:22
-#, fuzzy
 msgid "We will soon start a new chapter with Quarkus 2.0.0.Final.  It should be released by the end of this month."
 msgstr "もうすぐQuarkus 2.0.0.Finalで新しい章が始まります。今月末にはリリースされる予定です。"
 
 #. type: Plain text
 #: upstream/_posts/2021-06-09-quarkus-1-13-7-final-released.adoc:24
-#, fuzzy
 msgid "You can find more information in https://groups.google.com/g/quarkus-dev/c/18Ocz1wtKjo/m/tuRVB97aAAAJ[the announcement]."
-msgstr "詳細は link:https://groups.google.com/g/quarkus-dev/c/18Ocz1wtKjo/m/tuRVB97aAAAJ[発表資料]をご覧ください。"
+msgstr "詳細は link:https://groups.google.com/g/quarkus-dev/c/18Ocz1wtKjo/m/tuRVB97aAAAJ[アナウンス]をご覧ください。"
 
 #. type: Plain text
 #: upstream/_posts/2021-06-09-quarkus-1-13-7-final-released.adoc:26
-#, fuzzy
 msgid "Please test your applications with our latest 2.0.0.CR3 and report back!"
 msgstr "最新の2.0.0.CR3でアプリケーションをテストして、報告してください。"
 
