--- a/l10n/stats/translation.csv
+++ b/l10n/stats/translation.csv
@@ -1,4 +1,5 @@
 Filename, Fuzzy Messages, Total Messages, Fuzzy Words, Total Words, Achievement
+l10n/po/ja_JP/_posts/2021-06-22-calling-all-roadies.adoc.po, 0, 34, 0, 377 ,100%
 l10n/po/ja_JP/_posts/2021-06-09-quarkus-1-13-7-final-released.adoc.po, 0, 17, 0, 184 ,100%
 l10n/po/ja_JP/_posts/2021-06-04-quarkus-2-0-0-cr3-released.adoc.po, 0, 21, 0, 215 ,100%
 l10n/po/ja_JP/_posts/2021-05-27-quarkus-insights-qanda2.adoc.po, 0, 5, 0, 117 ,100%
