--- a/l10n/po/ja_JP/_posts/2021-06-22-calling-all-roadies.adoc.po
+++ b/l10n/po/ja_JP/_posts/2021-06-22-calling-all-roadies.adoc.po
@@ -20,7 +20,7 @@ msgstr ""
 #: upstream/_posts/2021-06-22-calling-all-roadies.adoc:1
 #, no-wrap
 msgid "---\n"
-msgstr ""
+msgstr "—\n"
 
 #. type: Plain text
 #: upstream/_posts/2021-06-22-calling-all-roadies.adoc:8
