Update .po files

--- a/l10n/po/ja_JP/_versions/main/guides/cli-tooling.adoc.po
+++ b/l10n/po/ja_JP/_versions/main/guides/cli-tooling.adoc.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2021-06-19 02:29+0000\n"
+"POT-Creation-Date: 2021-06-22 02:24+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -160,7 +160,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/main/guides/cli-tooling.adoc:99
 #: upstream/_versions/main/guides/cli-tooling.adoc:127
-msgid "applying codestarts...  📚 java 🔨 maven 📦 quarkus 📝 config-properties 🔧 dockerfiles 🔧 maven-wrapper 📄 resteasy-codestart"
+msgid "applying codestarts...  📚 java 🔨 maven 📦 quarkus 📝 config-properties 🔧 dockerfiles 🔧 maven-wrapper 🚀 resteasy-codestart"
 msgstr ""
 
 #. type: delimited block -
@@ -225,6 +225,7 @@ msgstr "利用可能なすべてのオプションを表示するには、ヘル
 #: upstream/_versions/main/guides/cli-tooling.adoc:144
 #: upstream/_versions/main/guides/cli-tooling.adoc:161
 #: upstream/_versions/main/guides/cli-tooling.adoc:171
+#: upstream/_versions/main/guides/cli-tooling.adoc:242
 #, no-wrap
 msgid "[source,shell]\n"
 msgstr ""
@@ -251,7 +252,7 @@ msgstr "エクステンションへの対応"
 #: upstream/_versions/main/guides/cli-tooling.adoc:191
 #: upstream/_versions/main/guides/cli-tooling.adoc:203
 #: upstream/_versions/main/guides/cli-tooling.adoc:213
-#: upstream/_versions/main/guides/cli-tooling.adoc:242
+#: upstream/_versions/main/guides/cli-tooling.adoc:235
 msgid "[source,shell]"
 msgstr ""
 
@@ -355,21 +356,14 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_versions/main/guides/cli-tooling.adoc:228
-#, no-wrap
-msgid ""
-"...\n"
-"[INFO] ------------------------------------------------------------------------\n"
-"[INFO] BUILD SUCCESS\n"
-"[INFO] ------------------------------------------------------------------------\n"
-"[INFO] Total time:  8.331 s\n"
-"[INFO] Finished at: 2021-05-27T10:13:28-04:00\n"
-"[INFO] ------------------------------------------------------------------------\n"
-"---\n"
+msgid "...  [INFO] ------------------------------------------------------------------------ [INFO] BUILD SUCCESS [INFO] ------------------------------------------------------------------------ [INFO] Total time: 8.331 s [INFO] Finished at: 2021-05-27T10:13:28-04:00 [INFO] ------------------------------------------------------------------------"
 msgstr ""
 
-#. type: Plain text
+#. type: delimited block -
 #: upstream/_versions/main/guides/cli-tooling.adoc:231
-msgid "Note: Output will vary depending on the build tool your project is using (maven, gradle, or jbang)."
+#: upstream/_versions/main/guides/cli-tooling.adoc:265
+#, no-wrap
+msgid "Note: Output will vary depending on the build tool your project is using (`maven`, `gradle`, or `jbang`).\n"
 msgstr ""
 
 #. type: Title ==
@@ -378,17 +372,16 @@ msgstr ""
 msgid "Development mode"
 msgstr "開発モード"
 
-#. type: delimited block -
+#. type: Plain text
 #: upstream/_versions/main/guides/cli-tooling.adoc:237
-#, no-wrap
-msgid ""
-"$ quarkus dev --help\n"
-"---\n"
+msgid "$ quarkus dev --help"
 msgstr ""
 
 #. type: delimited block -
 #: upstream/_versions/main/guides/cli-tooling.adoc:240
-msgid "To start dev mode from the Quarkus CLI do:"
+#, fuzzy, no-wrap
+#| msgid "To start dev mode from the Quarkus CLI do:"
+msgid "To start dev mode from the Quarkus CLI do:\n"
 msgstr "Quarkus CLI から dev モードを起動するには、以下を実行します。"
 
 #. type: Plain text
@@ -417,12 +410,6 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/main/guides/cli-tooling.adoc:262
 msgid "Tests paused, press [r] to resume"
-msgstr ""
-
-#. type: delimited block -
-#: upstream/_versions/main/guides/cli-tooling.adoc:265
-#, no-wrap
-msgid "Note: Output will vary depending on the build tool your project is using (maven, gradle, or jbang).\n"
 msgstr ""
 
 #~ msgid "Now you can run the Quarkus CLI:"
