Apply translation memory

--- a/l10n/po/ja_JP/_posts/2021-06-22-abraxas-customer-story.adoc.po
+++ b/l10n/po/ja_JP/_posts/2021-06-22-abraxas-customer-story.adoc.po
@@ -20,7 +20,7 @@ msgstr ""
 #: upstream/_posts/2021-06-22-abraxas-customer-story.adoc:1
 #, no-wrap
 msgid "---\n"
-msgstr ""
+msgstr "—\n"
 
 #. type: Plain text
 #: upstream/_posts/2021-06-22-abraxas-customer-story.adoc:8
@@ -103,7 +103,7 @@ msgstr ""
 #: upstream/_posts/2021-06-22-abraxas-customer-story.adoc:34
 #, no-wrap
 msgid "Architecture"
-msgstr ""
+msgstr "アーキテクチャ"
 
 #. type: Plain text
 #: upstream/_posts/2021-06-22-abraxas-customer-story.adoc:36
@@ -129,7 +129,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_posts/2021-06-22-abraxas-customer-story.adoc:43
 msgid "PostgreSQL"
-msgstr ""
+msgstr "PostgreSQL"
 
 #. type: Plain text
 #: upstream/_posts/2021-06-22-abraxas-customer-story.adoc:44
@@ -184,7 +184,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_posts/2021-06-22-abraxas-customer-story.adoc:54
 msgid "Scheduler"
-msgstr ""
+msgstr "スケジューラー"
 
 #. type: Plain text
 #: upstream/_posts/2021-06-22-abraxas-customer-story.adoc:55
